RESOLVED FIXED282959
Stack overflow and OOM should not be catchable from Wasm
https://bugs.webkit.org/show_bug.cgi?id=282959
Summary Stack overflow and OOM should not be catchable from Wasm
daniel_liu4
Reported 2024-11-11 16:57:07 PST
According to both the old and new exception specs, these exceptions should not be catchable from Wasm. rdar://139515612
Attachments
daniel_liu4
Comment 1 2024-11-11 16:58:58 PST
EWS
Comment 2 2024-11-12 09:13:15 PST
Committed 286486@main (a2ba2b6959db): <https://commits.webkit.org/286486@main> Reviewed commits have been landed. Closing PR #36511 and removing active labels.
EWS
Comment 3 2024-11-19 14:24:28 PST
Committed 283286.500@safari-7620-branch (6f3e325233b5): <https://commits.webkit.org/283286.500@safari-7620-branch> Reviewed commits have been landed. Closing PR #2308 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.