Stack overflow and OOM should not be catchable from Wasm https://bugs.webkit.org/show_bug.cgi?id=282959 rdar://139515612

Reviewed by Justin Michaud and Keith Miller.

According to both the old and new exception specs, stack overflow and
out of memory errors should not be catchable from WebAssembly `catch`
(or similar). However, the exceptions were still marked as catchable
from Wasm, meaning they could trigger incorrect handlers.

* JSTests/wasm/stress/catch-should-keep-alive-inline-parent-expression-stack.js:
(async test):
* Source/JavaScriptCore/runtime/ErrorInstance.h:
(JSC::ErrorInstance::setStackOverflowError):
(JSC::ErrorInstance::setOutOfMemoryError):
* Source/JavaScriptCore/wasm/WasmSlowPaths.cpp:
(JSC::LLInt::WASM_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/286486@main