Source/JavaScriptCore/runtime/ErrorInstance.h
@@ -80,9 +80,17 @@ public:
     void clearRuntimeTypeForCause() { m_runtimeTypeForCause = TypeNothing; }
 
     ErrorType errorType() const { return m_errorType; }
-    void setStackOverflowError() { m_stackOverflowError = true; }
+    void setStackOverflowError()
+    {
+        m_catchableFromWasm = false;
+        m_stackOverflowError = true;
+    }
     bool isStackOverflowError() const { return m_stackOverflowError; }
-    void setOutOfMemoryError() { m_outOfMemoryError = true; }
+    void setOutOfMemoryError()
+    {
+        m_catchableFromWasm = false;
+        m_outOfMemoryError = true;
+    }
     bool isOutOfMemoryError() const { return m_outOfMemoryError; }
 
     void setNativeGetterTypeError() { m_nativeGetterTypeError = true; }
